--- a/css/contactme.css
+++ b/css/contactme.css
@@ -130,6 +130,7 @@ a {
   }
   section .title {
     max-width: 60%;
+    font-size: 2.6vw;
     width: 100%;
     align-self: center;
     transform: translateY(-50px);
